--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "debug": "^4.3.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jest": "^27.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.11",
     "morgan": "^1.10.0",
